SSB Importer refactored & FIDE Importer vorbereitet

--- a/ch.jester.importmanagerservice.impl/plugin.xml
+++ b/ch.jester.importmanagerservice.impl/plugin.xml
@@ -13,6 +13,11 @@
             shortType="*.xls"
             typeDescription="SSB Excel Importer">
       </ImportHandler>
+      <ImportHandler
+            class="ch.jester.importmanagerservice.impl.internal.FIDEExcelImporter"
+            shortType="*.xls"
+            typeDescription="FIDE Excel Importer">
+      </ImportHandler>
    </extension>
 
 </plugin>
