--- a/trunk/ch.jester.ui.tournament.nl1/build.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/build.properties
@@ -1,4 +1,11 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.properties,\
+               plugin_de.properties,\
+               plugin_fr.properties
+src.includes = META-INF/,\
+               plugin.properties,\
+               plugin_de.properties,\
+               plugin_fr.properties
