Wizard Page mit den allgemeinen Turnierdaten.

--- a/ch.jester.db.hsqldb/build.properties
+++ b/ch.jester.db.hsqldb/build.properties
@@ -1,8 +1,6 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               hsqldb.jar,\
-               plugin.properties,\
-               plugin_de.properties
+               hsqldb.jar
 jars.compile.order = .
 source.. = src
 output..=bin
