--- a/ch.jester.rcpapplication.nl1/build.properties
+++ b/ch.jester.rcpapplication.nl1/build.properties
@@ -9,7 +9,7 @@ bin.includes = META-INF/,\
 jars.compile.order = .
 src.includes = plugin_de.properties,\
                plugin.properties,\
-               META-INF/MANIFEST.MF,\
                plugin_fr.properties,\
-               src/ch/
+               src/ch/,\
+               META-INF/
 bin.excludes = bin/.svn/
