--- a/trunk/ch.jester.db.hsqldb.fragment/.project
+++ b/trunk/ch.jester.db.hsqldb.fragment/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ch.jester.db.hsqldb.fragment</name>
+	<name>ch.jester.hibernate.modelfragment</name>
 	<comment></comment>
 	<projects>
 	</projects>
