--- a/trunk/ch.jester.hibernate/.classpath
+++ b/trunk/ch.jester.hibernate/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="hibernate-search-3.4.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate-search-infinispan-3.4.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="lucene-core-3.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
