--- a/trunk/ch.jester.hibernate/build.properties
+++ b/trunk/ch.jester.hibernate/build.properties
@@ -17,7 +17,10 @@ bin.includes = META-INF/,\
                swarmcache-1.0RC2.jar,\
                src/,\
                slf4j-api-1.6.1.jar,\
-               slf4j-log4j12-1.6.1.jar
+               slf4j-log4j12-1.6.1.jar,\
+               hibernate-search-3.4.0.Final.jar,\
+               hibernate-search-infinispan-3.4.0.Final.jar,\
+               lucene-core-3.1.0.jar
 jars.compile.order = .
 source.. = src
 output..=bin
