Ziemlich viel unter der Haube von den Playern geschraubt

--- a/ch.jester.ui/plugin.xml
+++ b/ch.jester.ui/plugin.xml
@@ -5,7 +5,7 @@
          point="org.eclipse.ui.views">
       <view
             allowMultiple="false"
-            class="ch.jester.ui.player.editor.PlayersView"
+            class="ch.jester.ui.player.editor.view.PlayersView"
             id="ch.jester.ui.view.players"
             name="Players">
       </view>
