--- a/trunk/ch.jester.commonservices.impl/build.properties
+++ b/trunk/ch.jester.commonservices.impl/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               bin/
+               bin/,\
+               plugin.xml
 source.. = src/
