--- a/trunk/ch.jester.commonservices.impl/build.properties
+++ b/trunk/ch.jester.commonservices.impl/build.properties
@@ -3,5 +3,7 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                bin/,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/IPingProvider.xml,\
+               OSGI-INF/IHTTPProxyAdapter.xml
 source.. = src/
