--- a/trunk/ch.jester.orm/build.properties
+++ b/trunk/ch.jester.orm/build.properties
@@ -1,9 +1,11 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/,\
                OSGI-INF/l10n/,\
-               OSGI-INF/l10n/bundle.properties
+               OSGI-INF/l10n/bundle.properties,\
+               OSGI-INF/IDatabaseStateService.xml,\
+               OSGI-INF/IPersistencyEventQueue.xml
+source.. = src/
 javacDefaultEncoding.. = UTF-8
