--- a/ch.jester.ui.tournament.nl1/plugin.properties
+++ b/ch.jester.ui.tournament.nl1/plugin.properties
@@ -1,3 +1,4 @@
 NewTournament=New tournament
 TournamentPerspective=Tournament
 CreateNewTournament=Create a new tournament
+TournamentNavigator=Tournament Explorer
