--- a/trunk/ch.jester.rcpapplication/plugin_customization.ini
+++ b/trunk/ch.jester.rcpapplication/plugin_customization.ini
@@ -1,5 +1,5 @@
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = true
 org.eclipse.ui/DOCK_PERSPECTIVE_BAR = topRight
 org.eclipse.ui/SHOW_TRADITIONAL_STYLE_TABS = true
-org.eclipse.ui/PERSPECTIVE_BAR_EXTRAS=ch.jester.perspective.admin, ch.jester.rcpapplication.tournamentPerspective
+org.eclipse.ui/PERSPECTIVE_BAR_EXTRAS=ch.jester.rcpapplication.tournamentPerspective, ch.jester.perspective.admin
 org.eclipse.ui/PERSPECTIVE_BAR_SIZE = 250
